--- a/.github/actions/documentation/action.yml
+++ b/.github/actions/documentation/action.yml
@@ -7,31 +7,31 @@ runs:
     - name: "Run doxygen command"
       shell: bash
       run: |
-          # We only make check, not changes
-          DOX_CONF_FILE=$(pwd)/Doxyfile
+        # We only make check, not changes
+        DOX_CONF_FILE=$(pwd)/Doxyfile
 
-          # ToDo: Add documentation about this command and describe better
-          {
-              cat $DOX_CONF_FILE
-              echo "INPUT" = $(pwd)/src $(pwd)/include $(pwd)/lib
-          } > $DOX_CONF_FILE
+        # ToDo: Add documentation about this command and describe better
+        {
+            cat $DOX_CONF_FILE
+            echo "INPUT" = $(pwd)/src $(pwd)/include
+        } > $DOX_CONF_FILE
 
-          # Generate documentation
-          # ToDo: Add documentation about this command and describe better
-          sudo dot -c
+        # Generate documentation
+        # ToDo: Add documentation about this command and describe better
+        sudo dot -c
 
-          ERROR_FILE_FLAG=$(pwd)/dox_errors.txt
+        ERROR_FILE_FLAG=$(pwd)/dox_errors.txt
 
-          # ToDo: Add documentation and describe better this command
-          DOXYGEN_COMMAND=$(doxygen -s $DOX_CONF_FILE) > $ERROR_FILE_FLAG
+        # ToDo: Add documentation and describe better this command
+        DOXYGEN_COMMAND=$(doxygen -s $DOX_CONF_FILE) > $ERROR_FILE_FLAG
 
-          if [ -s $ERROR_FILE_FLAG ]; then
-              echo "Error: There are some files that are not documented correctly"
-              exit 1
-          else
-              echo "All files are documented correctly. Niiiceee"
-              exit 0
-          fi
+        if [ -s $ERROR_FILE_FLAG ]; then
+            echo "Error: There are some files that are not documented correctly"
+            exit 1
+        else
+            echo "All files are documented correctly. Niiiceee"
+            exit 0
+        fi
     # Upload errors as an artifact, when failed
     - uses: actions/upload-artifact@v3
       if: failure()
