--- a/.github/actions/style/action.yml
+++ b/.github/actions/style/action.yml
@@ -9,21 +9,17 @@ runs:
       run: |
         # We only make check, not changes
         # Use the find command with the variable
+        # Hint! Copy this code and store it in a script file, to run locally. Change -n by -i to apply the changes.
         PROJECT_PATH=$(pwd)
 
-        echo $PROJECT_PATH
-
-        # ToDo: Add documentation about 'tr' command and describe better this command
         SOURCE_FILES=$(find $PROJECT_PATH/src -type f \( -name "*.cpp" -or -name "*.hpp" -or -name "*.h" -or -name "*.c" \) | tr "\n" " ")
         SOURCE_FILES+=$(find $PROJECT_PATH/include -type f \( -name "*.cpp" -or -name "*.hpp" -or -name "*.h" -or -name "*.c" \) | tr "\n" " ")
-        SOURCE_FILES+=$(find $PROJECT_PATH/lib -type f \( -name "*.cpp" -or -name "*.hpp" -or -name "*.h" -or -name "*.c" \) | tr "\n" " ")
 
         ERROR_FILE_FLAG=$PROJECT_PATH/clang-format_errors.txt
 
-        # ToDo: Add documentation and describe better this command
-        CLANG_COMMAND=$(clang-format -i $SOURCE_FILES) > ${ERROR_FILE_FLAG}
+        CLANG_COMMAND=$(clang-format -n $SOURCE_FILES) > ${ERROR_FILE_FLAG}
 
-        echo "Running: clang-format -i $SOURCE_FILES"
+        echo "Running: clang-format -n $SOURCE_FILES"
 
         if [ -s $ERROR_FILE_FLAG ]; then
             echo "Error: There are some files that are not formatted correctly"
